fixes mobile display of logout confirmation, adds profile form link on mobile navbar

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -248,4 +248,10 @@ body {
         left: 0;
         padding-left: 0;
     }
+
+    /* logout para text reduced */
+    .logout-p {
+        font-size: 1.5em;
+    }
+
 }
